--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Flower Catalog</title>
     <link rel="stylesheet" type="text/css"  href="style.css" />
+    <script src="main.js"></script>
   </head>
   <body>
     <hr>
@@ -16,7 +17,7 @@
           <li><a href="#">Ageratum</a></li>
         </ul>
         <a href="#">Guest Book</a>
-        <img src="animated-flower-image-0021.gif" alt="animated" />
+        <img id="jar" src="animated-flower-image-0021.gif" alt="animated" />
       </div>
     </main>
   </body>
