--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <h1 class="title">Flower Catalog</h1>
    <hr>
     <main>
-      <div style="border:1px solid"><img src="freshorigins.jpg" alt="Flowers" /></div>
+      <div style="border:1px solid"><img src="images/freshorigins.jpg" alt="Flowers" /></div>
       <div>
         <ul>
           <li><a href="#">Abeliophyllum</a></li>
           <li><a href="#">Ageratum</a></li>
         </ul>
-        <a href="#">Guest Book</a>
-        <img id="jar" src="animated-flower-image-0021.gif" alt="animated" />
+        <a href="./guest.html">Guest Book</a>
+        <img id="jar" src="images/animated-flower-image-0021.gif" alt="animated" />
       </div>
     </main>
   </body>
