now its working show the comments or
save the comments in anthor file
we have to decode the comments now

--- a/public/guest.html
+++ b/public/guest.html
@@ -11,13 +11,14 @@
         <a href="/"> <<</a> Guest Book
       </p>
       <h1>Leave a comment</h1>
-      <form action="" method="POST">
-      <label>Name:</label><input type="text" name="name"><br>
-      <label>Comment:</label>
-      <textarea name="text" id="text" cols="30" rows="10"></textarea><br>
-      <input type="submit" name="submit" value="Submit"><br>
-    </form>
-      <hr>
+      <form method="POST">
+        <label>Name:</label><input type="text" name="name" /><br />
+        <label>Comment:</label>
+        <textarea name="comment" id="text" cols="30" rows="10"></textarea><br />
+        <input type="submit" value="Submit" style="font-size:30px" /><br />
+      </form>
+      <hr />
+      <!-- <div>####comments####</div> -->
     </main>
   </body>
 </html>
