added a html file for abeliophyllum
and create a link for pdf

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Flower Catalog</title>
     <link rel="stylesheet" type="text/css"  href="style.css" />
@@ -13,7 +13,7 @@
       <div style="border:1px solid"><img src="images/freshorigins.jpg" alt="Flowers" /></div>
       <div>
         <ul>
-          <li><a href="#">Abeliophyllum</a></li>
+          <li><a href="./abeliophyllum.html">Abeliophyllum</a></li>
           <li><a href="#">Ageratum</a></li>
         </ul>
         <a href="./guest.html">Guest Book</a>
