create a new page for ageratum and give a link for pdf

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <div>
         <ul>
           <li><a href="./abeliophyllum.html">Abeliophyllum</a></li>
-          <li><a href="#">Ageratum</a></li>
+          <li><a href="./Ageratum.html">Ageratum</a></li>
         </ul>
         <a href="./guest.html">Guest Book</a>
         <img id="jar" src="images/animated-flower-image-0021.gif" alt="animated" />
