remove the file of comments and a function for createing the file
and also add the refresh button now i have to implement the button

--- a/public/guest.html
+++ b/public/guest.html
@@ -18,7 +18,10 @@
         <input type="submit" value="Submit" style="font-size:30px" /><br />
       </form>
       <hr />
-      <!-- <div>####comments####</div> -->
+  <div> <b> Comments </b>
+    <button style="font-size:15px"> &#x21bb</button>  </p>
+  </div>
     </main>
+
   </body>
 </html>
