--- a/public/guest.html
+++ b/public/guest.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <title>Page Title</title>
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <script src="guest.js"></script>
 </head>
 <body>
   <main>
@@ -19,7 +19,10 @@
       </form>
       <hr />
   <div> <b> Comments </b>
-    <button style="font-size:15px"> &#x21bb</button>  </p>
+    <button id="reload" style="font-size:15px"> &#x21bb</button>  </p>
+  </div>
+  <div id="comments" >
+    ____COMMENTS____
   </div>
     </main>
 
