added new feature of login

--- a/public/guest.html
+++ b/public/guest.html
@@ -10,13 +10,7 @@
     <p style="text-align:center; color:orange; font-size: 40px">
         <a href="/"> <<</a> Guest Book
       </p>
-      <h1>Leave a comment</h1>
-      <form method="POST">
-        <label>Name:</label><input type="text" name="name" /><br />
-        <label>Comment:</label>
-        <textarea name="comment" id="text" cols="30" rows="10"></textarea><br />
-        <input type="submit" value="Submit" style="font-size:30px" /><br />
-      </form>
+      ____forms____
       <hr />
   <div> <b> Comments </b>
     <button id="reload" style="font-size:15px"> &#x21bb</button>  </p>
